Small changes get(0) -> getFirst()